--- a/languages/en.json
+++ b/languages/en.json
@@ -8,6 +8,9 @@
 	"recent": "Recent",
 	"home": "Home",
 
+	"title": "Title",
+	"community": "Community",
+	"username": "Username",
 
 	"password_does_not_match": "Passwords does not match!"
 }
