added community header

--- a/languages/en.json
+++ b/languages/en.json
@@ -8,6 +8,8 @@
 	"recent": "Recent",
 	"home": "Home",
 
+	"created":"Created",
+
 	"title": "Title",
 	"community": "Community",
 	"username": "Username",
