added topic modal and messages composer

--- a/languages/en.json
+++ b/languages/en.json
@@ -7,6 +7,8 @@
 	"follow":"Follow",
 	"unfollow":"Unfollow",
 	"load_more":"Load more",
+	"reply":"Reply",
+	"preview":"Preview",
 
 	"recent": "Recent",
 	"home": "Home",
