better composer size on topic creation

--- a/languages/en.json
+++ b/languages/en.json
@@ -10,6 +10,7 @@
 	"reply":"Reply",
 	"send":"Send",
 	"preview":"Preview",
+	"content":"Content",
 	"select_community": "Select community",
 	"new_topic":"New topic",
 	"new_community":"New community",
