adding user profile modal

--- a/languages/en.json
+++ b/languages/en.json
@@ -17,8 +17,10 @@
 
 	"recent": "Recent",
 	"home": "Home",
+	"latest_topics": "Latest topics",
 
 	"created":"Created",
+	"registered":"Registered",
 
 	"title": "Title",
 	"description": "Description",
