added ignored and ban buttons on user profile

--- a/languages/en.json
+++ b/languages/en.json
@@ -6,6 +6,10 @@
 	"delete":"Delete",
 	"follow":"Follow",
 	"unfollow":"Unfollow",
+	"ignore":"Ignore",
+	"unignore":"Unignore",
+	"ban":"Ban",
+	"unban":"Unban",
 	"load_more":"Load more",
 	"reply":"Reply",
 	"send":"Send",
