added edit button on profile modal

--- a/languages/en.json
+++ b/languages/en.json
@@ -14,6 +14,7 @@
 	"reply":"Reply",
 	"send":"Send",
 	"update":"Update",
+	"edit":"Edit",
 	"preview":"Preview",
 	"content":"Content",
 	"select_community": "Select community",
