added ignored users list to user profile edit modal

--- a/languages/en.json
+++ b/languages/en.json
@@ -24,6 +24,7 @@
 	"recent": "Recent",
 	"home": "Home",
 	"latest_topics": "Latest topics",
+	"ignored_users":"Ignored users",
 
 	"created":"Created",
 	"registered":"Registered",
