--- a/languages/en.json
+++ b/languages/en.json
@@ -24,6 +24,7 @@
 	"notifications":"Notifications",
 	"delete_post_confirm":"Are you sure you want to delete this post?",
 	"delete_topic_confirm":"Are you sure you want to delete this topic?",
+	"delete_poll_confirm":"Are you sure you want to delete this poll?",
 	"add_mod":"Add mod",
 	"ban_user":"Ban user",
 
@@ -52,6 +53,11 @@
 	"user_data": "User data",
 	"change_password": "Change Password",
 	"admin": "Admin",
+	"poll": "Poll",
+	"vote": "Vote",
+	"poll_title":"Poll title",
+	"poll_options":"Poll options",
+	"poll_options_info":"One option per line",
 
 	"password_does_not_match": "Passwords does not match!",
 
